--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 				});
 			});
 
+			function timeUpdate()
+			{
+				var time = new Date();
+				var audiosource = getElementbyid
+			}
+
 			/*function changeColor()
 			{
 				var time = new Date();
@@ -101,12 +107,17 @@
 			}*/
 		</script>
 		<!--<embed src="music/test1.mp3" autostart="true" loop="true" hidden = "true">-->
-		<audio hidden autoplay loop>
+		<audio hidden autoplay loop id="music">
 			<source src="music/test1.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 		<!--<video id="bgVideo" controls preload="true" autoplay loop muted>
 			<source src="video/test1.mp4" type="video/mp4" > 
 		</video>-->
+		<p>
+			<a href="https://soundcloud.com/suh-hyun-kwon">
+				<img src="logo.png" width="400" height="400" border="0">
+			</a>
+		</p>
 	</body>
 </html>
