--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         	-moz-transform-origin: 0 0;
         	-moz-transform: scale(2);
         }
+        #logo
+        {
+        	position: absolute;
+        	bottom: 0px;
+        	right: 0px;
+        }
+
         /*video#bgvid { 
             position: fixed;
             top: 50%;
@@ -114,9 +121,9 @@
 		<!--<video id="bgVideo" controls preload="true" autoplay loop muted>
 			<source src="video/test1.mp4" type="video/mp4" > 
 		</video>-->
-		<p>
+		<div id = "logo">
 			<a href="https://soundcloud.com/suh-hyun-kwon">
-				<img src="logo.png" width="400" height="400" border="0">
+				<img src="logo.png" width="42" height="42" border="0">
 			</a>
 		</p>
 	</body>
