--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         {
         	transform-origin: 0 0;
         	transform: scale(2);
-        	-ms-transform: scale(2);
+        	-ms-transform: scale(1);
         	-webkit-transform-origin: 0 0;
-        	-webkit-transform: scale(2);
+        	-webkit-transform: scale(1);
         	-o-transform-origin: 0 0;
-        	-o-transform: scale(2);
+        	-o-transform: scale(1);
         	-moz-transform-origin: 0 0;
-        	-moz-transform: scale(2);
+        	-moz-transform: scale(1);
         }
         #logo
         {
@@ -79,7 +79,7 @@
 			function timeUpdate()
 			{
 				var time = new Date();
-				var audiosource = getElementbyid
+				var audiosource = getElementbyid("music");
 			}
 
 			/*function changeColor()
