--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		<!--<embed src="music/test1.mp3" autostart="true" loop="true" hidden = "true">-->
 		<audio id="music" hidden autoplay loop>
 			<!--<source id="music" src="" type="audio/mpeg">-->
-			Your browser does not support the audio element.
+			Hello
 		</audio>
 		<!--<video id="bgVideo" controls preload="true" autoplay loop muted>
 			<source src="video/test1.mp4" type="video/mp4" > 
