Added Placeholder Gifs

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					var time = new Date();
 					if(twelveamtoeightflag == false && time.getHours() >= 0 && time.getHours() < 8)
 					{
-						document.body.style.backgroundImage = "url('video/giphy.gif')";
+						document.body.style.backgroundImage = "url('video/giphy5.gif')";
 						document.getElementById("music").src = "music/8AM12PM.mp3";
 						twelveamtoeightflag = true;
 						eightamtotwelveflag = false;
@@ -125,7 +125,7 @@
 					}
 					else if(eightamtotwelveflag == false && time.getHours() >= 8 && time.getHours() < 12)
 					{
-						document.body.style.backgroundImage = "url('video/giphy.gif')";
+						document.body.style.backgroundImage = "url('video/giphy4.gif')";
 						document.getElementById("music").src ="music/8AM12PM.mp3";
 						eightamtotwelveflag = true;
 						twelveamtoeightflag = false;
@@ -135,7 +135,7 @@
 					}
 					else if(twelvepmtofourflag == false && time.getHours() >= 12 && time.getHours() < 16)
 					{
-						document.body.style.backgroundImage = "url('video/giphy.gif')";
+						document.body.style.backgroundImage = "url('video/giphy3.gif')";
 						document.getElementById("music").src = "music/12PM4PM.mp3";
 						twelvepmtofourflag = true;
 						eightamtotwelveflag = false;
@@ -145,7 +145,7 @@
 					}
 					else if(fourpmtoeightflag == false && time.getHours() >= 16 && time.getHours() < 20)
 					{
-						document.body.style.backgroundImage = "url('video/giphy.gif')";
+						document.body.style.backgroundImage = "url('video/giphy2.gif')";
 						document.getElementById("music").src = "music/4PM8PM.mp3";
 						fourpmtoeightflag = true;
 						twelvepmtofourflag = false;
