--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         {
         	position: absolute;
         	bottom: 0px;
-        	right: 0px;
+        	display: block;
+        	left: 50%;
         }
         .wrapper 
         {
