--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         	bottom: 0px;
         	display: block;
         	left: 50%;
+        	margin: -140px 0 0 0;
         }
         .wrapper 
         {
