--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         	position: absolute;
         	bottom: 0px;
         	display: block;
-        	left: 50%;
-        	margin: -140px 0 0 0;
+        	margin-left: auto;
+        	margin-right: auto;
         }
         .wrapper 
         {
