--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         {
         	position: absolute;
         	bottom: 0px;
+        }
+        #logoImage
+        {
         	display: block;
         	margin-left: auto;
         	margin-right: auto;
@@ -212,7 +215,7 @@
 		</video>-->
 		<div id = "logo" class = "wrapper">
 			<a href="https://soundcloud.com/suh-hyun-kwon">
-				<img src="logo.png" width="250" height="250" border="0">
+				<img id = "logoImage" src="logo.png" width="250" height="250" border="0">
 			</a>
 		</p>
 	</body>
