--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
         {
         	position: absolute;
         	bottom: 0px;
-        }
-        #logoImage
-        {
-        	display: block;
-        	margin-left: auto;
-        	margin-right: auto;
+        	left: 50%;
+        	margin: -125px 0 0 125px;
         }
         .wrapper 
         {
@@ -215,7 +211,7 @@
 		</video>-->
 		<div id = "logo" class = "wrapper">
 			<a href="https://soundcloud.com/suh-hyun-kwon">
-				<img id = "logoImage" src="logo.png" width="250" height="250" border="0">
+				<img src="logo.png" width="250" height="250" border="0">
 			</a>
 		</p>
 	</body>
