--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 
 		<script src="compiled/jqueryv1.11.1.js"></script>
 
-		<script src="compiled/flipclock.js"></script>		
+		<script src="compiled/flipclock.js"></script>
+
+		<link rel="icon" href="logo.png">		
 	</head>
 <!--<video playsinline autoplay muted loop id="bgvid">
     <source src="video/test1.mp4" type="video/mp4">
