--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
     <source src="video/test1.mp4" type="video/mp4">
 </video>-->
 	<body>
-		<p id="date" style = "font-size: 50pt">
-
-		</p>
+		<div text-align = center>
+			<p id="date" style = "font-size: 100pt; font-family: 'Century Gothic'">
+				Your browser does not support the date.
+			</p>
+		</div>
 		<div id="flipclock" class="clock"></div>
 
 		<script type="text/javascript">
