--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </video>-->
 	<body>
 		<div align = left>
-			<p id="date" style = "font-size: 100pt; font-family: 'Century Gothic', 'Helvetica Neue'; : white">
+			<p id="date" style = "font-size: 100pt; font-family: 'Century Gothic', 'Helvetica Neue'; : white; font-weight: bold">
 			</p>
 		</div>
 		<div id="flipclock" class="clock"></div>
