Rearrange Logo and Clock

--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 	<style type="text/css"> 
         #flipclock
         {
-        	width: 460px;
-        	height: 100px;
         	padding: 20px;
         	position: absolute;
-        	top: 50%;
-        	left: 50%;
-        	margin: -140px 0 0 -500px;
+        	bottom: 0px;
         }
         .clock
         {
@@ -25,7 +21,7 @@
         #logo
         {
         	position: absolute;
-        	bottom: 0px;
+        	top: 50%;
         	left: 50%;
         	margin: -125px 0 0 -125px;
         }
@@ -96,6 +92,13 @@
 			<p id="date" style = "font-size: 100pt; font-family: 'Century Gothic', 'Helvetica Neue'; : white; font-weight: bold">
 			</p>
 		</div>
+
+		<div id = "logo" class = "wrapper">
+			<a href="https://soundcloud.com/suh-hyun-kwon">
+				<img src="logo.png" width="350" height="350" border="0">
+			</a>
+		</div>
+
 		<div id="flipclock" class="clock"></div>
 
 		<script type="text/javascript">
@@ -266,6 +269,6 @@
 			<a href="https://soundcloud.com/suh-hyun-kwon">
 				<img src="logo.png" width="350" height="350" border="0">
 			</a>
-		</p>
+		</div>
 	</body>
 </html>
