--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         #logo
         {
-        	position: absolute;
+        	/*position: absolute;*/
         	top: 50%;
         	left: 50%;
         	margin: -125px 0 0 -125px;
@@ -88,7 +88,7 @@
 </video>-->
 	<body>
 		<div align = left>
-			<p id="date" style = "font-size: 75pt; font-family: 'Century Gothic', 'Helvetica Neue'; : white; font-weight: bold">
+			<p id="date" style = "font-size: 75pt; font-family: 'Century Gothic', 'Helvetica Neue'; : rgb(255, 255, 255); font-weight: bold">
 			</p>
 		</div>
 
