Removed Second Logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         #logo
         {
-        	/*position: absolute;*/
+        	position: absolute;
         	top: 50%;
         	left: 50%;
         	margin: -125px 0 0 -125px;
@@ -264,10 +264,12 @@
 		<!--<video id="bgVideo" controls preload="true" autoplay loop muted>
 			<source src="video/test1.mp4" type="video/mp4" > 
 		</video>-->
+		<!--
 		<div id = "logo" class = "wrapper">
 			<a href="https://soundcloud.com/suh-hyun-kwon">
 				<img src="logo.png" width="350" height="350" border="0">
 			</a>
 		</div>
+		-->
 	</body>
 </html>
