--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </video>-->
 	<body>
 		<div align = left>
-			<p id="date" style = "font-size: 75pt; font-family: 'Century Gothic', 'Helvetica Neue'; : rgb(255, 255, 255); font-weight: bold">
+			<p id="date" style = "font-size: 75pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold">
 			</p>
 		</div>
 
