--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 	<style type="text/css"> 
         #flipclock
         {
+        	height: auto;
+        	width: auto;
         	position: absolute;
         	bottom: 100px;
         }
