--- a/index.html
+++ b/index.html
@@ -74,6 +74,23 @@
         	background-position: center;
         	background-size: cover;
         }
+        .flip-clock-wrapper ul 
+        {
+        	background: #fff;
+        }
+
+        .flip-clock-wrapper ul li a div.up:after 
+        {
+        	background-color: #fff;
+        	background-color: rgba(0, 0, 0, 0.4);
+        }
+
+        .flip-clock-wrapper ul li a div div.inn 
+        {
+        	color: #111;
+        	text-shadow: 0 1px 1px #555;
+        	background-color: #ddd;
+        }
     </style>
 	<head>
 		<link rel="stylesheet" href="compiled/flipclock.css">
