--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </style>
 	<head>
 		<link rel="stylesheet" href="compiled/flipclock.css">
-		<link rel="stylesheet" href="customclock.scss">
+		<link rel="stylesheet" href="customclock.css">
 
 		<script src="compiled/jqueryv1.11.1.js"></script>
 
