--- a/index.html
+++ b/index.html
@@ -77,13 +77,15 @@
     </style>
 	<head>
 		<link rel="stylesheet" href="compiled/flipclock.css">
-		<link rel="stylesheet" href="customclock.css">
+		<!--<link rel="stylesheet" href="customclock.css">-->
+		<!--<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.7/flipclock.css'>-->
+		<link rel="stylesheet" href="style.css">
 
 		<script src="compiled/jqueryv1.11.1.js"></script>
 
 		<script src="compiled/flipclock.js"></script>
 
-		<link rel="icon" href="logo.png">		
+		<link rel="icon" href="funicon.png">		
 	</head>
 <!--<video playsinline autoplay muted loop id="bgvid">
     <source src="video/test1.mp4" type="video/mp4">
@@ -100,7 +102,7 @@
 			</a>
 		</div>
 
-		<div id="flipclock" class="clock"></div>
+		<div id="flipclock" class="countdown"></div>
 
 		<script type="text/javascript">
 			var clock;
