--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			var clock;
 			
 			$(document).ready(function() {
-				clock = $('.clock').FlipClock({
+				clock = $('.countdown').FlipClock({
 					clockFace: 'TwentyFourHourClock',
 					showSeconds: true
 
