--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <source src="video/test1.mp4" type="video/mp4">
 </video>-->
 	<body>
-		<div align = left>
-			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold">
+		<div align = center>
+			<p id="date" styles = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold">
 			</p>
 		</div>
 
