--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			</p>
 		</div>
 
-		<div id = "logo" class = "wrapper">
+		<div align = center id = "logo" class = "wrapper">
 			<a href="https://soundcloud.com/suh-hyun-kwon">
 				<img src="logo.png" width="500" height="500" border="0">
 			</a>
