--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 			</p>
 		</div>
 
-		<div align = center id = "logo" class = "wrapper">
+		<div id = "logo" class = "wrapper">
 			<a href="https://soundcloud.com/suh-hyun-kwon">
 				<img src="logo.png" width="500" height="500" border="0">
 			</a>
 		</div>
 
-		<div id="flipclock" class="countdown"></div>
+		<div align = center id="flipclock" class="countdown"></div>
 
 		<script type="text/javascript">
 			var clock;
