--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </video>-->
 	<body>
 		<div align = center>
-			<p id="date" styles = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold">
+			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold">
 			</p>
 		</div>
 
@@ -102,7 +102,7 @@
 			</a>
 		</div>
 
-		<div align = center id="flipclock" class="countdown"></div>
+		<div id="flipclock" class="countdown"></div>
 
 		<script type="text/javascript">
 			var clock;
