--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         	height: auto;
         	width: auto;
         	position: absolute;
-        	bottom: 50px;
+        	bottom: 20px;
+        	left: 50%;
+        	margin: -140 0 0 -500px;
         }
         .clock
         {
