--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 	<style type="text/css"> 
         #flipclock
         {
-        	height: auto;
-        	width: auto;
+        	height: 100px;
+        	width: 500px;
         	position: absolute;
-        	bottom: -15px;
+        	bottom: 30px;
         	left: 50%;
         	margin: -140 0 0 -250px;
         }
@@ -18,8 +18,8 @@
         }
         .wrapper 
         {
-        	width: 400px;
-        	height: 400px;
+        	width: 150px;
+        	height: 150px;
         	text-align: center;
         }
 
@@ -82,7 +82,7 @@
 </video>-->
 	<body>
 		<div align = center>
-			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold">
+			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold; top: 45">
 			</p>
 		</div>
 
