--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
         #flipclock
         {
         	height: 100px;
-        	width: 800px;
+        	width: 900px;
         	position: absolute;
-        	bottom: 30px;
+        	bottom: 50px;
         	left: 50%;
         	margin: -140 0 0 -250px;
         }
@@ -14,7 +14,7 @@
         	position: absolute;
         	top: 50%;
         	left: 50%;
-        	margin: -200px 0 0 -200px;
+        	margin: -75px 0 0 -75px;
         }
         .wrapper 
         {
@@ -82,7 +82,7 @@
 </video>-->
 	<body>
 		<div align = center>
-			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold; top: 45">
+			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold; top: 65px">
 			</p>
 		</div>
 
