--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         }
         .wrapper 
         {
-        	width: 150px;
-        	height: 150px;
+        	width: 30%;
+        	height: auto;
         	text-align: center;
         }
 
