--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         	position: absolute;
         	top: 50%;
         	left: 50%;
-        	margin: -75px 0 0 -75px;
+        	margin: 5% 0 0 5%;
         }
         .wrapper 
         {
-        	width: 30%;
+        	width: 10%;
         	height: auto;
         	text-align: center;
         }
