--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         	position: absolute;
         	top: 50%;
         	left: 50%;
-        	margin: 5% 0 0 5%;
+        	margin: -125px 0 0 -125px;
         }
         .wrapper 
         {
-        	width: 10%;
-        	height: auto;
+        	width: 250px;
+        	height: 250px;
         	text-align: center;
         }
 
