--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </video>-->
 	<body>
 		<div align = center>
-			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold; top: 115px">
+			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold; position: absolute; top: 115px">
 			</p>
 		</div>
 
