--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         	height: 100px;
         	width: 900px;
         	position: absolute;
-        	bottom: 100px;
+        	bottom: 50px;
         	left: 50%;
         	margin: -140 0 0 -250px;
         }
@@ -82,7 +82,7 @@
 </video>-->
 	<body>
 		<div align = center>
-			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold; position: absolute; top: 115px">
+			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold; position: absolute; top: 65px; left: 50%">
 			</p>
 		</div>
 
