--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <source src="video/test1.mp4" type="video/mp4">
 </video>-->
 	<body>
-		<div align = center>
-			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold; position: absolute; top: 65px; left: 50%">
+		<div align = center style = "padding-top: 65px">
+			<p id="date" style = "font-size: 60pt; font-family: 'Century Gothic', 'Helvetica Neue'; color: #ffffff; font-weight: bold">
 			</p>
 		</div>
 
