--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 		<script src="compiled/flipclock.js"></script>
 
-		<link rel="icon" href="funicon.png">		
+		<link rel="icon" href="logo.png">
 	</head>
 <!--<video playsinline autoplay muted loop id="bgvid">
     <source src="video/test1.mp4" type="video/mp4">
