Update Gif Library

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 
 					if(twelveamtoeightflag == false && time.getHours() >= 0 && time.getHours() < 4)
 					{
-						document.body.style.backgroundImage = "url('video/giphy5.gif')";
-						document.getElementById("music").src = "music/8AM12PM.mp3";
+						document.body.style.backgroundImage = "url('video/12AM-4AM.gif')";
+						document.getElementById("music").src = "music/12AM-4AM.mp3";
 						twelveamtofourflag = true;
 						fouramtoeightflag = false;
 						eightamtotwelveflag = false;
@@ -177,6 +177,8 @@
 					}
 					else if(twelveamtoeightflag == false && time.getHours() >= 4 && time.getHours() < 8)
 					{
+						document.body.style.backgroundImage = "url('video/4AM-8AM.gif')";
+						document.getElementById("music").src = "music/4AM-8AM.mp3";
 						fouramtoeightflag = true;
 						twelveamtofourflag = false
 						eightamtotwelveflag = false;
@@ -187,7 +189,7 @@
 					}
 					else if(eightamtotwelveflag == false && time.getHours() >= 8 && time.getHours() < 12)
 					{
-						document.body.style.backgroundImage = "url('video/giphy4.gif')";
+						document.body.style.backgroundImage = "url('video/8AM-12PM.gif')";
 						document.getElementById("music").src ="music/8AM12PM.mp3";
 						eightamtotwelveflag = true;
 						twelveamtoeightflag = false;
@@ -198,7 +200,7 @@
 					}
 					else if(twelvepmtofourflag == false && time.getHours() >= 12 && time.getHours() < 16)
 					{
-						document.body.style.backgroundImage = "url('video/giphy3.gif')";
+						document.body.style.backgroundImage = "url('video/12PM-4PM.gif')";
 						document.getElementById("music").src = "music/12PM4PM.mp3";
 						twelvepmtofourflag = true;
 						eightamtotwelveflag = false;
@@ -209,7 +211,7 @@
 					}
 					else if(fourpmtoeightflag == false && time.getHours() >= 16 && time.getHours() < 20)
 					{
-						document.body.style.backgroundImage = "url('video/giphy2.gif')";
+						document.body.style.backgroundImage = "url('video/4PM-8PM.gif')";
 						document.getElementById("music").src = "music/4PM8PM.mp3";
 						fourpmtoeightflag = true;
 						twelvepmtofourflag = false;
@@ -220,7 +222,7 @@
 					}
 					else if (eightpmtotwelveflag == false && time.getHours() >= 20 && time.getHours() < 24)
 					{
-						document.body.style.backgroundImage = "url('video/giphy.gif')";
+						document.body.style.backgroundImage = "url('video/8PM-12AM.gif')";
 						document.getElementById("music").src = "music/4PM8PM.mp3";
 						eightpmtotwelveflag = true;
 						fourpmtoeightflag = false;
