--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         	-o-transition: margin 0.3s, height 0.3s;
         	transition: margin 0.3s, height 0.3s;
         }
+        @font-face
+        {
+        	font-family: 'Century Gothic';
+        	src: url('font/century-gothic.ttf'),
+        	url('font/century-gothic.eot');
+        }
         /*video#bgvid { 
             position: fixed;
             top: 50%;
